Add NSSInput.Builder and migrate old methods
Marked old methods as deprecated
Also formatted the files, will update editor config later.